bindings/rgml.h

#ifndef PRISM_MATH_H
#define PRISM_MATH_H

/* Warning, this file is autogenerated by cbindgen. Modify this at your own risk!. */

#include <stdarg.h>
#include <stdbool.h>
#include <stddef.h>
#include <stdint.h>
#include <stdlib.h>


/**
 * A matrix type. Commonly used for 3D graphics and rendering
 *
 * At an underlying level, [Matrix] is an equivalent to using `[[T; W]; H]`
 *
 * # Note:
 *   * [Matrix<T, 2, 2>] and [Matrix<T, 3, 3>] types include determinant() functions
 *   * [Matrix<T, 2, 2>], [Matrix<T, 3, 3>], and [Matrix<T, 4, 4>] types include inverse() functions
 *
 *   Implementations of Matrix inverse and determinant are from [GLM](<https://github.com/g-truc/glm/blob/master/glm/detail/func_matrix.inl>)
 */
typedef struct Matrix_f64__4__4 {
  /**
   * The underlying array of the matrix, the matrix dereferences into this array
   */
  double backing[4][4];
} Matrix_f64__4__4;

/**
 * [Matrix<T, 4, 4>] backed by [f64]
 */
typedef struct Matrix_f64__4__4 dmat4_t;

/**
 *
 * A vector type. Commonly used for 2D and 3D math
 *
 * At an underlying level a [Vector] is an equivalent to using `[T; C]`
 *
 */
typedef struct Vector_f64__4 {
  /**
   * The underlying array of the vector, dereferencing [Vector] returns this
   */
  double backing[4];
} Vector_f64__4;

/**
 * [Vector<T, 4>] backed by [f64]
 */
typedef struct Vector_f64__4 dvec4_t;

/**
 *
 * A vector type. Commonly used for 2D and 3D math
 *
 * At an underlying level a [Vector] is an equivalent to using `[T; C]`
 *
 */
typedef struct Vector_f64__3 {
  /**
   * The underlying array of the vector, dereferencing [Vector] returns this
   */
  double backing[3];
} Vector_f64__3;

/**
 * [Vector<T, 3>] backed by [f64]
 */
typedef struct Vector_f64__3 dvec3_t;

/**
 *
 * A vector type. Commonly used for 2D and 3D math
 *
 * At an underlying level a [Vector] is an equivalent to using `[T; C]`
 *
 */
typedef struct Vector_f64__2 {
  /**
   * The underlying array of the vector, dereferencing [Vector] returns this
   */
  double backing[2];
} Vector_f64__2;

/**
 * [Vector<T, 2>] backed by [f64]
 */
typedef struct Vector_f64__2 Vector2F64;

/**
 * A matrix type. Commonly used for 3D graphics and rendering
 *
 * At an underlying level, [Matrix] is an equivalent to using `[[T; W]; H]`
 *
 * # Note:
 *   * [Matrix<T, 2, 2>] and [Matrix<T, 3, 3>] types include determinant() functions
 *   * [Matrix<T, 2, 2>], [Matrix<T, 3, 3>], and [Matrix<T, 4, 4>] types include inverse() functions
 *
 *   Implementations of Matrix inverse and determinant are from [GLM](<https://github.com/g-truc/glm/blob/master/glm/detail/func_matrix.inl>)
 */
typedef struct Matrix_f32__4__4 {
  /**
   * The underlying array of the matrix, the matrix dereferences into this array
   */
  float backing[4][4];
} Matrix_f32__4__4;

/**
 * [Matrix<T, 4, 4>] backed by [f32]
 */
typedef struct Matrix_f32__4__4 mat4_t;

/**
 *
 * A vector type. Commonly used for 2D and 3D math
 *
 * At an underlying level a [Vector] is an equivalent to using `[T; C]`
 *
 */
typedef struct Vector_f32__4 {
  /**
   * The underlying array of the vector, dereferencing [Vector] returns this
   */
  float backing[4];
} Vector_f32__4;

/**
 * [Vector<T, 4>] backed by [f32]
 */
typedef struct Vector_f32__4 vec4_t;

/**
 *
 * A vector type. Commonly used for 2D and 3D math
 *
 * At an underlying level a [Vector] is an equivalent to using `[T; C]`
 *
 */
typedef struct Vector_f32__3 {
  /**
   * The underlying array of the vector, dereferencing [Vector] returns this
   */
  float backing[3];
} Vector_f32__3;

/**
 * [Vector<T, 3>] backed by [f32]
 */
typedef struct Vector_f32__3 vec3_t;

/**
 *
 * A vector type. Commonly used for 2D and 3D math
 *
 * At an underlying level a [Vector] is an equivalent to using `[T; C]`
 *
 */
typedef struct Vector_f32__2 {
  /**
   * The underlying array of the vector, dereferencing [Vector] returns this
   */
  float backing[2];
} Vector_f32__2;

/**
 * [Vector<T, 2>] backed by [f32]
 */
typedef struct Vector_f32__2 Vector2F32;

#ifdef __cplusplus
extern "C" {
#endif // __cplusplus

dmat4_t dmat4_default(void);

dmat4_t dmat4_identity(void);

dmat4_t dmat4_inverse(dmat4_t i);

dmat4_t dmat4_mul(dmat4_t lhs, dmat4_t rhs);

dvec4_t dmat4_mul_vec4(dmat4_t lhs, dvec4_t rhs);

dmat4_t dmat4_perspective(double fov_y, double aspect, double z_near, double z_far);

dmat4_t dmat4_rotate_x(double degrees);

dmat4_t dmat4_rotate_y(double degrees);

dmat4_t dmat4_rotate_z(double degrees);

dmat4_t dmat4_rotation(dvec3_t euler);

dmat4_t dmat4_translation(dvec3_t vector);

dmat4_t dmat4_transpose(dmat4_t i);

Vector2F64 dvec2_abs(Vector2F64 i);

Vector2F64 dvec2_add(Vector2F64 lhs, Vector2F64 rhs);

Vector2F64 dvec2_ceil(Vector2F64 i);

Vector2F64 dvec2_cos(Vector2F64 i);

Vector2F64 dvec2_default(void);

Vector2F64 dvec2_div(Vector2F64 lhs, Vector2F64 rhs);

double dvec2_dot(Vector2F64 lhs, Vector2F64 rhs);

Vector2F64 dvec2_floor(Vector2F64 i);

Vector2F64 dvec2_fract(Vector2F64 i);

Vector2F64 dvec2_from_vec3(dvec3_t i);

Vector2F64 dvec2_from_vec4(dvec4_t i);

Vector2F64 dvec2_lerp(Vector2F64 from, Vector2F64 to, double alpha);

double dvec2_magnitude(Vector2F64 i);

double dvec2_magnitude_sqr(Vector2F64 i);

Vector2F64 dvec2_max(Vector2F64 lhs, Vector2F64 rhs);

Vector2F64 dvec2_min(Vector2F64 lhs, Vector2F64 rhs);

Vector2F64 dvec2_mul(Vector2F64 lhs, Vector2F64 rhs);

Vector2F64 dvec2_new(double x, double y);

Vector2F64 dvec2_normalize(Vector2F64 i);

Vector2F64 dvec2_pow(Vector2F64 lhs, Vector2F64 rhs);

Vector2F64 dvec2_round(Vector2F64 i);

Vector2F64 dvec2_saturate(Vector2F64 i);

Vector2F64 dvec2_scalar(double x);

Vector2F64 dvec2_sign(Vector2F64 i);

Vector2F64 dvec2_sin(Vector2F64 i);

Vector2F64 dvec2_sqrt(Vector2F64 i);

Vector2F64 dvec2_sub(Vector2F64 lhs, Vector2F64 rhs);

double dvec2_sum(Vector2F64 i);

Vector2F64 dvec2_tan(Vector2F64 i);

dvec3_t dvec3_abs(dvec3_t i);

dvec3_t dvec3_add(dvec3_t lhs, dvec3_t rhs);

dvec3_t dvec3_ceil(dvec3_t i);

dvec3_t dvec3_cos(dvec3_t i);

dvec3_t dvec3_cross(dvec3_t lhs, dvec3_t rhs);

dvec3_t dvec3_default(void);

dvec3_t dvec3_div(dvec3_t lhs, dvec3_t rhs);

double dvec3_dot(dvec3_t lhs, dvec3_t rhs);

dvec3_t dvec3_floor(dvec3_t i);

dvec3_t dvec3_fract(dvec3_t i);

dvec3_t dvec3_from_vec2(Vector2F64 i);

dvec3_t dvec3_from_vec4(dvec4_t i);

dvec3_t dvec3_lerp(dvec3_t from, dvec3_t to, double alpha);

double dvec3_magnitude(dvec3_t i);

double dvec3_magnitude_sqr(dvec3_t i);

dvec3_t dvec3_max(dvec3_t lhs, dvec3_t rhs);

dvec3_t dvec3_min(dvec3_t lhs, dvec3_t rhs);

dvec3_t dvec3_mul(dvec3_t lhs, dvec3_t rhs);

dvec3_t dvec3_new(double x, double y, double z);

dvec3_t dvec3_normalize(dvec3_t i);

dvec3_t dvec3_pow(dvec3_t lhs, dvec3_t rhs);

dvec3_t dvec3_reflect(dvec3_t lhs, dvec3_t rhs);

dvec3_t dvec3_round(dvec3_t i);

dvec3_t dvec3_saturate(dvec3_t i);

dvec3_t dvec3_scalar(double x);

dvec3_t dvec3_sign(dvec3_t i);

dvec3_t dvec3_sin(dvec3_t i);

dvec3_t dvec3_sqrt(dvec3_t i);

dvec3_t dvec3_sub(dvec3_t lhs, dvec3_t rhs);

double dvec3_sum(dvec3_t i);

dvec3_t dvec3_tan(dvec3_t i);

dvec4_t dvec4_abs(dvec4_t i);

dvec4_t dvec4_add(dvec4_t lhs, dvec4_t rhs);

dvec4_t dvec4_ceil(dvec4_t i);

dvec4_t dvec4_cos(dvec4_t i);

dvec4_t dvec4_default(void);

dvec4_t dvec4_div(dvec4_t lhs, dvec4_t rhs);

double dvec4_dot(dvec4_t lhs, dvec4_t rhs);

dvec4_t dvec4_floor(dvec4_t i);

dvec4_t dvec4_fract(dvec4_t i);

dvec4_t dvec4_from_vec2(Vector2F64 i);

dvec4_t dvec4_from_vec3(dvec3_t i);

dvec4_t dvec4_identity(void);

dvec4_t dvec4_lerp(dvec4_t from, dvec4_t to, double alpha);

double dvec4_magnitude(dvec4_t i);

double dvec4_magnitude_sqr(dvec4_t i);

dvec4_t dvec4_max(dvec4_t lhs, dvec4_t rhs);

dvec4_t dvec4_min(dvec4_t lhs, dvec4_t rhs);

dvec4_t dvec4_mul(dvec4_t lhs, dvec4_t rhs);

dvec4_t dvec4_mul_mat4(dvec4_t lhs, dmat4_t rhs);

dvec4_t dvec4_new(double x, double y, double z, double w);

dvec4_t dvec4_normalize(dvec4_t i);

dvec4_t dvec4_pow(dvec4_t lhs, dvec4_t rhs);

dvec4_t dvec4_round(dvec4_t i);

dvec4_t dvec4_saturate(dvec4_t i);

dvec4_t dvec4_scalar(double x);

dvec4_t dvec4_sign(dvec4_t i);

dvec4_t dvec4_sin(dvec4_t i);

dvec4_t dvec4_sqrt(dvec4_t i);

dvec4_t dvec4_sub(dvec4_t lhs, dvec4_t rhs);

double dvec4_sum(dvec4_t i);

dvec4_t dvec4_tan(dvec4_t i);

mat4_t mat4_default(void);

mat4_t mat4_identity(void);

mat4_t mat4_inverse(mat4_t i);

mat4_t mat4_mul(mat4_t lhs, mat4_t rhs);

vec4_t mat4_mul_vec4(mat4_t lhs, vec4_t rhs);

mat4_t mat4_perspective(float fov_y, float aspect, float z_near, float z_far);

mat4_t mat4_rotate_x(float degrees);

mat4_t mat4_rotate_y(float degrees);

mat4_t mat4_rotate_z(float degrees);

mat4_t mat4_rotation(vec3_t euler);

mat4_t mat4_translation(vec3_t vector);

mat4_t mat4_transpose(mat4_t i);

Vector2F32 vec2_abs(Vector2F32 i);

Vector2F32 vec2_add(Vector2F32 lhs, Vector2F32 rhs);

Vector2F32 vec2_ceil(Vector2F32 i);

Vector2F32 vec2_cos(Vector2F32 i);

Vector2F32 vec2_default(void);

Vector2F32 vec2_div(Vector2F32 lhs, Vector2F32 rhs);

float vec2_dot(Vector2F32 lhs, Vector2F32 rhs);

Vector2F32 vec2_floor(Vector2F32 i);

Vector2F32 vec2_fract(Vector2F32 i);

Vector2F32 vec2_from_vec3(vec3_t i);

Vector2F32 vec2_from_vec4(vec4_t i);

Vector2F32 vec2_lerp(Vector2F32 from, Vector2F32 to, float alpha);

float vec2_magnitude(Vector2F32 i);

float vec2_magnitude_sqr(Vector2F32 i);

Vector2F32 vec2_max(Vector2F32 lhs, Vector2F32 rhs);

Vector2F32 vec2_min(Vector2F32 lhs, Vector2F32 rhs);

Vector2F32 vec2_mul(Vector2F32 lhs, Vector2F32 rhs);

Vector2F32 vec2_new(float x, float y);

Vector2F32 vec2_normalize(Vector2F32 i);

Vector2F32 vec2_pow(Vector2F32 lhs, Vector2F32 rhs);

Vector2F32 vec2_round(Vector2F32 i);

Vector2F32 vec2_saturate(Vector2F32 i);

Vector2F32 vec2_scalar(float x);

Vector2F32 vec2_sign(Vector2F32 i);

Vector2F32 vec2_sin(Vector2F32 i);

Vector2F32 vec2_sqrt(Vector2F32 i);

Vector2F32 vec2_sub(Vector2F32 lhs, Vector2F32 rhs);

float vec2_sum(Vector2F32 i);

Vector2F32 vec2_tan(Vector2F32 i);

vec3_t vec3_abs(vec3_t i);

vec3_t vec3_add(vec3_t lhs, vec3_t rhs);

vec3_t vec3_ceil(vec3_t i);

vec3_t vec3_cos(vec3_t i);

vec3_t vec3_cross(vec3_t lhs, vec3_t rhs);

vec3_t vec3_default(void);

vec3_t vec3_div(vec3_t lhs, vec3_t rhs);

float vec3_dot(vec3_t lhs, vec3_t rhs);

vec3_t vec3_floor(vec3_t i);

vec3_t vec3_fract(vec3_t i);

vec3_t vec3_from_vec2(Vector2F32 i);

vec3_t vec3_from_vec4(vec4_t i);

vec3_t vec3_lerp(vec3_t from, vec3_t to, float alpha);

float vec3_magnitude(vec3_t i);

float vec3_magnitude_sqr(vec3_t i);

vec3_t vec3_max(vec3_t lhs, vec3_t rhs);

vec3_t vec3_min(vec3_t lhs, vec3_t rhs);

vec3_t vec3_mul(vec3_t lhs, vec3_t rhs);

vec3_t vec3_new(float x, float y, float z);

vec3_t vec3_normalize(vec3_t i);

vec3_t vec3_pow(vec3_t lhs, vec3_t rhs);

vec3_t vec3_reflect(vec3_t lhs, vec3_t rhs);

vec3_t vec3_round(vec3_t i);

vec3_t vec3_saturate(vec3_t i);

vec3_t vec3_scalar(float x);

vec3_t vec3_sign(vec3_t i);

vec3_t vec3_sin(vec3_t i);

vec3_t vec3_sqrt(vec3_t i);

vec3_t vec3_sub(vec3_t lhs, vec3_t rhs);

float vec3_sum(vec3_t i);

vec3_t vec3_tan(vec3_t i);

vec4_t vec4_abs(vec4_t i);

vec4_t vec4_add(vec4_t lhs, vec4_t rhs);

vec4_t vec4_ceil(vec4_t i);

vec4_t vec4_cos(vec4_t i);

vec4_t vec4_default(void);

vec4_t vec4_div(vec4_t lhs, vec4_t rhs);

float vec4_dot(vec4_t lhs, vec4_t rhs);

vec4_t vec4_floor(vec4_t i);

vec4_t vec4_fract(vec4_t i);

vec4_t vec4_from_vec2(Vector2F32 i);

vec4_t vec4_from_vec3(vec3_t i);

vec4_t vec4_identity(void);

vec4_t vec4_lerp(vec4_t from, vec4_t to, float alpha);

float vec4_magnitude(vec4_t i);

float vec4_magnitude_sqr(vec4_t i);

vec4_t vec4_max(vec4_t lhs, vec4_t rhs);

vec4_t vec4_min(vec4_t lhs, vec4_t rhs);

vec4_t vec4_mul(vec4_t lhs, vec4_t rhs);

vec4_t vec4_mul_mat4(vec4_t lhs, mat4_t rhs);

vec4_t vec4_new(float x, float y, float z, float w);

vec4_t vec4_normalize(vec4_t i);

vec4_t vec4_pow(vec4_t lhs, vec4_t rhs);

vec4_t vec4_round(vec4_t i);

vec4_t vec4_saturate(vec4_t i);

vec4_t vec4_scalar(float x);

vec4_t vec4_sign(vec4_t i);

vec4_t vec4_sin(vec4_t i);

vec4_t vec4_sqrt(vec4_t i);

vec4_t vec4_sub(vec4_t lhs, vec4_t rhs);

float vec4_sum(vec4_t i);

vec4_t vec4_tan(vec4_t i);

#ifdef __cplusplus
} // extern "C"
#endif // __cplusplus

#endif /* PRISM_MATH_H */